[package]
name    = "hep-rs-special-functions"
version = "0.1.0"

description   = "Special functions for high energy particle physics"
documentation = "https://docs.rs/hep-rs-special-functions"
license       = "Apache-2.0"
repository    = "https://github.com/hep-rs/hep-rs"

edition = "2021"

categories = ["science"]
keywords   = ["science", "physics", "particle-physics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
